src/objects/Mogli_SMS__Form__c.object
<CustomObject>
    <fields>
        <fullName>Mogli_SMS__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Forms</relationshipLabel>
        <relationshipName>Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__FormTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Form Template</label>
        <referenceTo>Mogli_SMS__FormTemplate__c</referenceTo>
        <relationshipLabel>Forms</relationshipLabel>
        <relationshipName>Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Forms</relationshipLabel>
        <relationshipName>Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Offline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Offline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Phone_Number__c</fullName>
        <label>Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Form</label>
    <listViews>
        <fullName>Mogli_SMS__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FN{0000000000}</displayFormat>
        <label>Form Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>